# VolumeTiledForwardShading

./: .gitattributes  .gitignore  .gitmodules  Assets.7z.001  Assets.7z.002  Assets.7z.003  Assets.7z.005  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CompressAssets.bat  CreateDependencies.bat  DecompressAssets.bat  Dependencies.7z.001  Dependencies.7z.004  Dependencies.7z.005  GenerateProjectFiles.bat  InitializeRepo.bat  README.md
Conf/: RegisterFileType_Win10_Rel_x64.bat  UnregisterFileType_Win10_Rel_x64.bat  buddha.3dgep  dabrovic-sponza.3dgep  house.3dgep  sanmiguel.3dgep  sponza_nobanner (720p).3dgep
Engine/: CMakeLists.txt  Engine.rc  resource.h
Engine/Resources/Shaders/: GUI_PS.hlsl  GUI_VS.hlsl  GenerateMips_CS.hlsl
Engine/inc/: Application.h  CThreadSafeQueue.h  Common.h  DependencyTracker.h  DependencyTracker.inl  EngineDefines.h  EngineIncludes.h  EnginePCH.h  Events.h  HighResolutionTimer.h  LogManager.h  NonCopyable.h  Object.h  ProfilerVisitor.h  ReadDirectoryChanges.h  SceneVisitor.h  Serialization.h  Statistic.h  ThreadSafeQueue.h
Engine/inc/GUI/: GUI.h
Engine/inc/Graphics/: Adapter.h  BlendState.h  Buffer.h  ByteAddressBuffer.h  Camera.h  ClearColor.h  CommandBuffer.h  CommandQueue.h  ComputeCommandBuffer.h  ComputeCommandQueue.h  ComputePipelineState.h  ConstantBuffer.h  CopyCommandBuffer.h  CopyCommandQueue.h  DepthStencilState.h  Device.h  DirectionalLight.h  Display.h  Fence.h  GraphicsCommandBuffer.h  GraphicsCommandQueue.h  GraphicsEnums.h  GraphicsPipelineState.h  IndexBuffer.h  IndirectArgument.h  IndirectCommandSignature.h  Material.h  Mesh.h  PointLight.h  Profiler.h  Query.h  QueueSemaphore.h  RasterizerState.h  Ray.h  ReadbackBuffer.h  Rect.h  RenderTarget.h  Resource.h  Sampler.h  Scene.h  (+11 more)
Engine/inc/Graphics/DX12/: ApplicationDX12.h  BlendStateDX12.h  BufferDX12.h  ByteAddressBufferDX12.h  ComputePipelineStateDX12.h  ConstantBufferDX12.h  CopyCommandQueueDX12.h  DepthStencilStateDX12.h  DescriptorAllocatorDX12.h  DeviceDX12.h  DynamicBufferDX12.h  DynamicDescriptorHeapDX12.h  FenceDX12.h  GraphicsCommandBufferDX12.h  GraphicsCommandQueueDX12.h  GraphicsPipelineStateDX12.h  HeapAllocatorDX12.h  IndexBufferDX12.h  IndirectCommandSignatureDX12.h  QueryDX12.h  QueueSemaphoreDX12.h  RasterizerStateDX12.h  ReadbackBufferDX12.h  RenderTargetDX12.h  ResourceDX12.h  SamplerDX12.h  SceneDX12.h  ShaderDX12.h  ShaderSignatureDX12.h  StructuredBufferDX12.h  TextureDX12.h  VertexBufferDX12.h  WindowDX12.h
Engine/inc/Graphics/DXGI/: AdapterDXGI.h  DisplayDXGI.h  TextureFormatDXGI.h
Engine/src/: Application.cpp  Common.cpp  DLLMain.cpp  DependencyTracker.cpp  EnginePCH.cpp  HighResolutionTimer.cpp  Object.cpp  ReadDirectoryChanges.cpp  ReadDirectoryChangesPrivate.cpp  ReadDirectoryChangesPrivate.h
Engine/src/GUI/: GUI.cpp  GUI_DX12.cpp
Engine/src/Graphics/: Camera.cpp  ClearColor.cpp  IndirectArgument.cpp  Material.cpp  Mesh.cpp  Profiler.cpp  Ray.cpp  RenderTarget.cpp  Scene.cpp  SceneNode.cpp  Shader.cpp  ShaderParameter.cpp  TextureFormat.cpp  Window.cpp
Engine/src/Graphics/DX12/: ApplicationDX12.cpp  BlendStateDX12.cpp  BufferDX12.cpp  ByteAddressBufferDX12.cpp  ComputePipelineStateDX12.cpp  ConstantBufferDX12.cpp  DepthStencilStateDX12.cpp  DescriptorAllocatorDX12.cpp  DeviceDX12.cpp  DynamicBufferDX12.cpp  DynamicDescriptorHeapDX12.cpp  FenceDX12.cpp  GraphicsCommandBufferDX12.cpp  GraphicsCommandQueueDX12.cpp  GraphicsPipelineStateDX12.cpp  HeapAllocatorDX12.cpp  IndexBufferDX12.cpp  IndirectCommandSignatureDX12.cpp  QueryDX12.cpp  QueueSemaphoreDX12.cpp  RasterizerStateDX12.cpp  ReadbackBufferDX12.cpp  RenderTargetDX12.cpp  ResourceDX12.cpp  SamplerDX12.cpp  SceneDX12.cpp  ShaderDX12.cpp  ShaderSignatureDX12.cpp  StructuredBufferDX12.cpp  TextureDX12.cpp  VertexBufferDX12.cpp  WindowDX12.cpp
Engine/src/Graphics/DXGI/: AdapterDXGI.cpp  DisplayDXGI.cpp  TextureFormatDXGI.cpp
Engine/vs_2017/: Engine.vcxproj  Engine.vcxproj.filters  PostBuildEvent.bat
Game/: CMakeLists.txt  Game.rc  resource.h
Game/Assets/shaders/: AssignLightsToClustersBVH_CS.hlsl  AssignLightsToClustersBVH_CS.hlsl.dep  AssignLightsToClusters_CS.hlsl  BuildBVH_CS.hlsl  ClusterSamples_VS.hlsl  Clustered_PS.hlsl.dep  ComputeGridFrustums_CS.hlsl  ComputeGridFrustums_CS.hlsl.dep  ComputeLightMortonCodes_CS.hlsl.dep  CountLights_CS.hlsl  CountLights_CS.hlsl.dep  DebugClusters_VSGSPS.hlsl  DebugClusters_VSGSPS.hlsl.dep  DebugLights_PS.hlsl.dep  DebugLights_VS.hlsl.dep  DebugTexture_VS.hlsl  DebugTexture_VS.hlsl.dep  DepthPass_PS.hlsl.dep  ForwardPlus_PS.hlsl  ForwardPlus_PS.hlsl.dep  Forward_PS.hlsl  Forward_PS.hlsl.dep  Forward_VS.hlsl  Forward_VS.hlsl.dep  RadixSort_CS.hlsl  ReduceLightsAABB_CS.hlsl.dep  Simple_PS.hlsl  TestShader_CS.hlsl.dep  UpdateClusterIndirectArgumentBuffers_CS.hlsl.dep  UpdateLights_CS.hlsl
Game/Assets/shaders/Include/: Arguments.hlsli  RootSignatures.hlsli
Game/Assets/textures/: LightCountHeatMap.psd  Loading Screen (Buddha).dds  Loading Screen (Buddha).psd  Loading Screen (Cube).dds  Loading Screen (Cube).psd  Loading Screen (Default).dds  Loading Screen (Default).psd  Loading Screen (Head).dds  Loading Screen (Head).psd
Game/Conf/: cube.3dgep  head.3dgep  sponza_nobanner (1080p).3dgep
Game/inc/: AbstractPass.h  BasePass.h  CameraController.h  ClearRenderTargetPass.h  CompositePass.h  ConfigurationSettings.h  ConfigurationSettings.inl  ConstantBuffers.h  GamePCH.h  InvokeFunctionPass.h  LightsPass.h  OpaquePass.h  PopProfileMarkerPass.h  PostprocessPass.h  PrintProfileDataVisitor.h  PushProfileMarkerPass.h  RenderPass.h  RenderTechnique.h  TransparentPass.h
Game/src/: AbstractPass.cpp  BasePass.cpp  CameraController.cpp  ClearRenderTargetPass.cpp  CompositePass.cpp  ConfigurationSettings.cpp  GamePCH.cpp  InvokeFunctionPass.cpp  LightsPass.cpp  OpaquePass.cpp  PopProfileMarkerPass.cpp  PostprocessPass.cpp  PrintProfileDataVisitor.cpp  PushProfileMarkerPass.cpp  RenderTechnique.cpp  TransparentPass.cpp  main.cpp
Game/vs_2017/: Game.vcxproj  Game.vcxproj.filters  resource.h
PropertySheets/: Debug.props  Profile.props  (+1 more)
(+228 files in other folders)
